--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <header>
         <nav>  
-            <a href="https://eben-webdev.github.io/kaufklnrz.github.io/">Home</a>
-            <a href="https://eben-webdev.github.io/kaufklnrz.github.io/">Services</a> 
-            <a href="https://eben-webdev.github.io/kaufklnrz.github.io/">About Us</a> 
-            <a href="https://eben-webdev.github.io/kaufklnrz.github.io/">Contact</a> 
-            <a href="https://eben-webdev.github.io/kaufklnrz.github.io/">Feedback</a> 
+            <a href="#">Home</a>
+            <a href="#">Services</a> 
+            <a href="#">About Us</a> 
+            <a href="#">Contact</a> 
+            <a href="#">Feedback</a> 
         </nav>    
     </header>    
 </body>
