--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaufman Kleeners | Home</title>
     <link rel="stylesheet" href="style.css"></link>
-    <link rel="images/png" href="Favicon"></link>
+    <link rel="images/png" href="images/Favicon.png"></link>
 </head>
 <body>
     <header>
