--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaufman Kleeners | Home</title>
-    <link rel="stylesheet" href="style.css"></link>
-    <link rel="icon" type="image/png" href="images/Favicon.png"></link>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kaufman Kleeners | Home</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="images/Favicon.png" />
 </head>
 <body>
-    <header>
-        <nav>  
-            <a href="#">Home</a>
-            <a href="#">Services</a> 
-            <a href="#">About Us</a> 
-            <a href="#">Contact</a> 
-            <a href="#">Feedback</a> 
-        </nav>    
-    </header>    
+  <header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Services</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact</a>
+        <a href="#">Feedback</a>
+    </nav>
+  </header>
+
+  <main>
+    
+  </main>
+
+  <footer>
+      
+  </footer>
 </body>
-</html>   
+</html>  
