--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
         <a href="#">Feedback</a>
     </nav>
   </header>
-
-  <main>
-    
-  </main>
-
-  <footer>
-      
-  </footer>
+    <footer>
+      <p>&copy; 2025 Kaufman Kleeners. All rights reserved.</p>
+    </footer>
 </body>
-</html>  
+</html>
