--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
   <link rel="icon" type="image/png" href="images/Favicon.png" />
 </head>
 <body>
-  <header>
-    <nav>
+  <div class="wrapper">
+    <header>
+      <nav>
         <a href="#">Home</a>
         <a href="#">Services</a>
         <a href="#">About Us</a>
         <a href="#">Contact</a>
         <a href="#">Feedback</a>
-    </nav>
-  </header>
+      </nav>
+    </header>
+    <main>
+    </main>
     <footer>
       <p>&copy; 2025 Kaufman Kleeners. All rights reserved.</p>
     </footer>
+  </div>
 </body>
 </html>
