--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <header>
       <nav>
-        <a href="#">Home</a>
+        <a href="https://eben-webdev.github.io/kaufklnrz.github.io/">Home</a>
         <a href="#">Services</a>
         <a href="#">About Us</a>
         <a href="#">Contact</a>
